<resources>
    <string name="app_name">miniproject</string>
    <string name="title">mymovie</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="telepon">No.Handphone</string>
    <string name="checkout">CHECKOUT</string>
    <string name="checkout1">Detail Tiket</string>
    <string name="back">BACK</string>
    <string name="deskripsi">Tayang Sekarang</string>
    <string name="main_menu">Main Menu</string>
    <string name="comingsoon">Coming Soon</string>
    <string name="spongebob">Spongebob</string>
    <string name="got">Game Of Thrones</string>
    <string name="inuyasha">Inuyasha</string>
    <string name="frozen">Frozen</string>
    <string name="hum">Human Centipede</string>
    <string name="home">Home Alone</string>
    <string name="lokasi">Matos</string>
    <string name="harga">Harga Per Tiket</string>
    <string name="hargapertiket">50000</string>
    <string name="hargatotal">Total Harga</string>
    <string name="total">100000</string>
    <string name="bayar">PAY</string>
    <string name="kembali">BACK</string>
    <string name="daftarfilm">DAFTAR FILM</string>
    <string name="pesan">BOOKING</string>
    <string name="jam">10.00 AM</string>
    <string name="kursi">A1 , A2</string>
    <string name="next">NEXT</string>
    <string name="pilihkursi">Pilih Kursi</string>
    <string name="Reguler">Reguler</string>
    <string name="kursidipilih">Kursi dipilih : A1 , A2</string>
    <string name="jadwal">Jadwal yang dipilih : 25 - 10 - 2021</string>
    <string name="payment">PAYMENT</string>
    <string name="checkout2">Detail Pembayaran</string>
    <string name="metodepembayaran">Metode Pembayaran</string>
    <string name="BCA">BCA</string>
    <string name="BRI">BRI</string>
    <string name="LinkAja">Link Aja</string>
    <string name="bayarditempat">Cash On Delivery / bayar di tempat</string>
    <string name="success">THANKS FOR PAY</string>
    <string name="scan">Please scan the QR code below to take the ticket at the ticket machine</string>
    <string name="BNI">BNI</string>
    <string name="gopay">GO PAY</string>
    <string name="ovo">OVO</string>
    <string name="logout">LOGOUT</string>
    <string name="jam1">Jam yang dipilih : 10.00 AM</string>


</resources>