<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </LinearLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/imageview"
        android:layout_width="192dp"
        android:layout_height="110dp"


        android:contentDescription="@string/title"
        android:src="@drawable/cinema"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/payment"
        android:textColor="#fff"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/imageview"
        />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="30dp"
        android:paddingRight="24dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metodepembayaran"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:background="@color/grayprimary" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BCA"
                >

            </RadioButton>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BRI"
                >

            </RadioButton>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gopay"
                >

            </RadioButton>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ovo"
                >

            </RadioButton>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LinkAja"
                >

            </RadioButton>


        </RadioGroup>

        <Button
            style="@style/btn_blue_primary"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_pay"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/bayar"/>
        <Button
            style="@style/btn_blue_primary"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_back4"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/kembali"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>