<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    >
    <ImageView
        android:id="@+id/imageview"
        android:layout_width="192dp"
        android:layout_height="110dp"


        android:contentDescription="@string/title"
        android:src="@drawable/cinema"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/checkout"
        android:textColor="#fff"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/imageview"
         />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="30dp"
        android:paddingRight="24dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="90dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ticketicon"
                />

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:background="@color/abuabumuda"
                android:orientation="vertical"
                android:layout_marginLeft="12dp">

                <TextView
                    android:id="@+id/nama_wisata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spongebob"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/lokasi"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/jam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/jam"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/kursi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/kursi"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp" />

            </LinearLayout>

            <ScrollView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/jumlah_tiket1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="10dp"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/jumlah_tiket2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="2"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/jumlah_tiket3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="3"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/jumlah_tiket4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="4"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/jumlah_tiket5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="5"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

            </ScrollView>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            android:textColor="@color/black"
            android:textSize="18sp"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:text="@string/hargapertiket"
                android:textColor="@color/grayprimary"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp"
                android:layout_marginStart="10dp"
                android:text="x"
                android:textColor="@color/grayprimary"
                android:textSize="16sp"
                android:layout_marginLeft="10dp" />


            <TextView
                android:id="@+id/texttotalharga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp" />


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hargatotal"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:text="@string/total"
            android:textColor="@color/grayprimary"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/grayprimary" />

        <Button
            style="@style/btn_blue_primary"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_pay"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/bayar"/>
        <Button
            style="@style/btn_blue_primary"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_back"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/kembali"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>