<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="192dp"
                android:layout_height="110dp"
                android:src="@drawable/cinema"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal"
                android:text="@string/title"
                android:textAlignment="center"

                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageview"

                />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="30dp"
                android:paddingRight="24dp"
                android:paddingBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/pilihkursi"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/Reguler"
                    android:textColor="@color/grayprimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="310dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10px">

                    <LinearLayout
                        android:layout_width="310dp"
                        android:layout_height="200dp"

                        >

                        <ImageView
                            android:layout_width="400dp"
                            android:layout_height="200dp"
                            android:src="@drawable/kursi2">

                        </ImageView>
                    </LinearLayout>

                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/kursidipilih"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="310dp"
                    android:layout_height="200dp"

                    >

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="200dp">

                        <ImageView
                            android:layout_width="300dp"
                            android:layout_height="200dp"
                            android:src="@drawable/calendar">
                        </ImageView>

                    </LinearLayout>

                </ScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/jadwal"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />







                <Button
                    android:id="@+id/btn_next1"
                    style="@style/btn_blue_primary"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/next" />

                <Button
                    android:id="@+id/btn_back1"
                    style="@style/btn_blue_primary"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/back" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>